Improve the style of the issue summary table.
This makes a few tweaks to the issue summary table. There's now more
padding in each row, making things less cramped. The double border has
also been removed, cleaning up the look. The "resolved" border is also a
lot less faint, blending in better with the other rows.

The description has been truncated at 20 words, which seems to be a
decent length. This keeps it from being a squashed mess.

The text in the cells are aligned to the top now, which helps with
wrapping. The description column now takes all the available space.

The Issue ID column has been removed. It wasn't really that useful and
didn't cleanly map (since the concept of an issue ID didn't exist
anywhere else).

--- a/reviewboard/static/rb/css/reviews.less
+++ b/reviewboard/static/rb/css/reviews.less
@@ -1358,9 +1358,15 @@
 
   tr {
     td {
-      border-width: 1px 0;
+      border-width: 0 0 1px 0;
       border-style: solid;
-      padding: 2px 5px;
+      padding: 5px 5px;
+      vertical-align: top;
+
+      a {
+        color: #0000CC;
+        text-decoration: none;
+      }
     }
 
     &.hidden {
@@ -1385,7 +1391,7 @@
       }
     }
 
-    .comment-id-header {
+    .description-header {
       border-left-width: 1px;
     }
 
@@ -1399,8 +1405,9 @@
       border-right-width: 1px;
     }
 
-    .comment-id {
+    .summary-table-description {
       border-left-width: 1px;
+      width: 100%;
     }
 
     &.open {
@@ -1420,7 +1427,7 @@
     &.resolved {
       td {
         background-color: #FFF;
-        border-color: #BBB;
+        border-color: #AAA;
       }
     }
 
